--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "canvas-confetti": "^1.6.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "langchain": "^0.0.75",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
